# DeepLoop

./: .gitignore  COMPLETE.md  CONCEPT.md  FINAL_TEST_RESULTS.md  GO_CLI_IMPLEMENTATION_PLAN.md  GO_CLI_README.md  MIGRATION.md  PHASE1_COMPLETE.md  PHASE3_4_COMPLETE.md  PHASE5_COMPLETE.md  PHASE6_COMPLETE.md  PROGRESS.md  RALPH_ML_CONFIG.json  README.md  README_GO.md  SETUP_SUMMARY.md  TESTING.md  WINDOWS_INSTALLATION.md  go.mod  mnist_test_config.json  mock_opencode.py  pyproject.toml  test_config.json  test_mock_config.json
cmd/ralph-ml/: init.go  main.go  report.go  resume.go  start.go  status.go
pkg/config/: config.go  config_test.go
pkg/display/: display.go
pkg/orchestrator/: orchestrator.go
pkg/paths/: paths.go  paths_test.go
pkg/state/: state.go  state_test.go
ralph_ml/: __init__.py  artifacts.py  cli.py  config.py  orchestrator.py  orchestrator_cli.py  stopping.py
ralph_ml/phases/: analysis.py  training.py
ralph_ml/runtime/: process_runner.py
scripts/: build.sh  download_mnist.py  generate_synthetic_data.py
tests/: __init__.py  conftest.py  test_cli.py  test_orchestrator_artifacts.py  test_orchestrator_phase2_metrics.py  test_orchestrator_phase3_analysis.py  test_orchestrator_run_flow.py  test_orchestrator_stop_policy.py
